--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- stylesheet of css -->
     <link rel="stylesheet" href="style.css">
+    <!-- fontawesome icons  -->
+    <script src="https://kit.fontawesome.com/fec513c49c.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
     <header class="container">
-        <nav class="navbar navbar-expand-lg py-3">
+        <!-- Nabver area  -->
+        <nav class="navbar navbar-expand-lg py-2">
             <div class="container-fluid">
                 <a class="navbar-brand text-secondary fw-bold" href="#">Abacus Convention Center</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -24,7 +28,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                    <ul class="navbar-nav py-3">
+                    <ul class="navbar-nav py-2">
                         <li class="nav-item">
                             <a class="nav-link active text-secondary fw-bold" aria-current="page" href="#">Home</a>
                         </li>
@@ -42,6 +46,94 @@
             </div>
         </nav>
     </header>
+
+    <main>
+        <!-- Carousel area -->
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                    aria-label="Slide 4"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/banner.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>The perfect venue for your
+                            next event</h1>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                            consequat duis enim velit </p>
+                        <button class="btn btn-light text-primary px-4">Book Now</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/banner1.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>The perfect venue for your
+                            next event</h1>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                            consequat duis enim velit </p>
+                        <button class="btn btn-light text-primary px-4">Book Now</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/people.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>The perfect venue for your
+                            next event</h1>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                            consequat duis enim velit </p>
+                        <button class="btn btn-light text-primary px-4">Book Now</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/banner2.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>The perfect venue for your
+                            next event</h1>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                            consequat duis enim velit </p>
+                        <button class="btn btn-light text-primary px-4">Book Now</button>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+
+            <!-- Moment area  -->
+            <section class="container my-5">
+                <div class="card mb-3 border-0">
+                    <div class="row g-0">
+                        <div class="col-md-5">
+                            <img src="images/wedding.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-7  d-flex align-items-center">
+                            <div class="card-body">
+                                <h3 class="card-title fw-semibold fs-2">Every moment is Precious </h3>
+                                <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                                    sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat
+                                    sunt nostrud amet.</p>
+                                <button class="btn bg-primary text-light rounded-0">Explore our album <i
+                                        class="fa-solid fa-arrow-right"></i> </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
